...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Wk1-EH-ekU">
                                <rect key="frame" x="210" y="207" width="180" height="30"/>
                                <animations/>
...
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" enablesReturnKeyAutomatically="YES"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="nlA-wi-FG2">
                                <rect key="frame" x="210" y="245" width="180" height="30"/>
                                <animations/>
...
                                <rect key="frame" x="167" y="342" width="126" height="30"/>
                                <animations/>
                                <state key="normal" title="Create an account">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                </variation>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="hDS-Fo-RDU">
                                <rect key="frame" x="210" y="396" width="180" height="30"/>
                                <animations/>
...
                                </constraints>
                            </imageView>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nick name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="oJN-gO-n84">
                                <rect key="frame" x="210" y="282" width="180" height="30"/>
                                <animations/>
...
                                    <constraint firstAttribute="width" constant="164" id="qEz-E3-14A"/>
                                </constraints>
                                <state key="normal" title="Have an account? Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                <rect key="frame" x="84" y="0.0" width="33" height="35"/>
                                <animations/>
                                <state key="normal" title="Male">
                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
