...
                imagePicker.sourceType = UIImagePickerControllerSourceType.Camera;
                imagePicker.allowsEditing = true
                self.presentViewController(imagePicker, animated: true, completion: nil)
            }
        }))
        
        alertController.addAction(UIAlertAction(title: "Choose Existing Photo", style: .Default, handler: { alertAction in
            // Handle Choose Existing Photo
            if UIImagePickerController.isSourceTypeAvailable(.PhotoLibrary){
                let picker = UIImagePickerController()
                picker.delegate = self
                picker.allowsEditing = true
                self.presentViewController(picker, animated: true, completion: nil)
...
                // Add an alter message to tell the user of this login failure
                let alertEmptyInfo = UIAlertController(
                    title: "Signup Failed!",
                    message: "Email and password cannot be empty.",
                    preferredStyle: UIAlertControllerStyle.Alert
                )
                // Add a "OK" button on the alter subview
                alertEmptyInfo.addAction(UIAlertAction(
                    title: "OK",
                    style: .Default)
                    { (action: UIAlertAction) -> Void in
                        // do nothing
                    }
...
                )
                self.presentViewController(signupSuccess, animated: true, completion: nil)
            } else {
                print ("signup failed")
                let signupSuccess = UIAlertController(
                    // TODO: error message ?
                    title: "Signup failed!",
                    message: errMsg,
                    preferredStyle: UIAlertControllerStyle.Alert
                )
                // Add a "OK" button on the alter subview
                signupSuccess.addAction(UIAlertAction(
                    title: "OK",
...
