...
        login.removeDefault()
        
        // The email and password cannot be empty.
        if emailTextField.text == "" || passwordTextField.text == "" {
            // Add an alter message to tell the user of this login failure
            let alertEmptyInfo = UIAlertController(
                title: "Login Failed!",
                message: "Email and password cannot be empty.",
                preferredStyle: UIAlertControllerStyle.Alert
            )
            // Add a "OK" button on the alter subview
            alertEmptyInfo.addAction(UIAlertAction(
                title: "OK",
                style: .Default)
                { (action: UIAlertAction) -> Void in
                    // do nothing
                }
...
