...
        var uid: Int?
        var nickname: String?
        var token: String?
        
        let parameters = ["email": email, "password": password]
        
        Alamofire.request(.POST,"\(APIUrl)/users/signin", parameters: parameters, encoding: .JSON)
            .responseJSON { response in
                let defautls = NSUserDefaults.standardUserDefaults()
                
                // store user's info to defaults
//                self.defaults.setObject(uid, forKey: "uid")
//                self.defaults.setObject(email, forKey: "email")
...
