...
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a0h-Np-t5H">
                                <rect key="frame" x="20" y="64" width="560" height="536"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q6B-B1-LJd">
                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Group size:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6bb-VC-UBt">
                                                <rect key="frame" x="8" y="136" width="87" height="24"/>
                                                <animations/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="24" id="o27-Mg-tSD"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ym7-oi-8Zb">
                                                <rect key="frame" x="103" y="136" width="167" height="24"/>
                                                <animations/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Activity:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LnQ-eR-wAY">
                                                <rect key="frame" x="8" y="16" width="62" height="24"/>
                                                <animations/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="24" id="Pb2-pB-hAs"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R1i-Aq-5wX">
                                                <rect key="frame" x="8" y="56" width="43" height="24"/>
                                                <animations/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="24" id="Mgk-7j-Afd"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8EG-bK-MMX">
                                                <rect key="frame" x="90" y="96" width="180" height="24"/>
                                                <animations/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duration:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pJY-jT-hAJ">
                                                <rect key="frame" x="8" y="96" width="70" height="24"/>
                                                <animations/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="24" id="Mwb-ma-CZY"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
