...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="17A-HL-3zr">
                                <rect key="frame" x="28" y="560" width="31" height="24"/>
                                <animations/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="OkX-42-QYy"/>
                                </constraints>
                                <state key="normal" title="New"/>
                                <connections>
                                    <segue destination="bmv-m6-8YB" kind="show" id="aVN-Rw-wgp"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IPh-jU-Tkh">
                                <rect key="frame" x="542" y="560" width="30" height="24"/>
...
